# Labaratory_cmake

./: CMakeLists.txt  Initializations181.cpp  header181.h  main181.cpp
MatPart181_2/: CMakeLists.txt  functions_arrays.cpp  functions_matrix181.cpp  header_functions181.h
MyTest/: CMakeLists.txt  myTest.cpp
